# socialscikit

./: .gitignore  CITATION.cff  LICENSE  README.md  README_zh.md  launch_app.py  pyproject.toml
examples/: consensus_example.csv  icr_example.csv  interview_example.txt  interview_focus_group.txt  methods_log_qualikit.json  methods_log_quantikit.json  policy_example.csv  sentiment_example.csv
promo/: backends.html  comparison.html  cover.html  qualikit_ui.html  quantikit_ui.html  server.py  social_preview.html  toolbox_ui.html
socialscikit/: __init__.py  cli.py
socialscikit/core/: __init__.py  charts.py  data_diagnostics.py  data_loader.py  data_validator.py  icr.py  llm_client.py  methods_writer.py  project_io.py
socialscikit/core/templates/: qualikit_template.csv  quantikit_template.csv
socialscikit/qualikit/: __init__.py  coder.py  coding_reviewer.py  confidence_ranker.py  consensus.py  deident_reviewer.py  deidentifier.py  exporter.py  extraction_reviewer.py  segment_extractor.py  segmenter.py  theme_definer.py  theme_reviewer.py
socialscikit/quantikit/: __init__.py  annotator.py  api_finetuner.py  budget_recommender.py  classifier.py  evaluator.py  feature_extractor.py  method_recommender.py  prompt_classifier.py  prompt_optimizer.py
socialscikit/ui/: __init__.py  i18n.py  main_app.py  qualikit_app.py  quantikit_app.py  toolbox_app.py
tests/: test_annotator.py  test_api_finetuner.py  test_budget_recommender.py  test_charts.py  test_classifier.py  test_coder.py  test_coding_reviewer.py  test_confidence_ranker.py  test_consensus.py  test_data_diagnostics.py  test_data_loader.py  test_data_validator.py  test_deident_reviewer.py  test_deidentifier.py  test_evaluator.py  test_exporter.py  test_feature_extractor.py  test_icr.py  test_llm_client.py  test_main_app.py  test_method_recommender.py  test_methods_writer.py  test_project_io.py  test_prompt_classifier.py  test_prompt_optimizer.py  test_qualikit_app.py  test_quantikit_app.py  test_segment_pipeline.py  test_theme_definer.py  test_theme_reviewer.py
