[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "socialscikit"
version = "0.1.0"
description = "Zero-code toolkit for social science text analysis — classification (QuantiKit), qualitative coding (QualiKit), and research methods tools (Toolbox)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SocialSciKit Contributors" },
]
keywords = ["social-science", "text-classification", "qualitative-coding", "inter-coder-reliability", "consensus-coding", "NLP", "LLM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0",
    "openpyxl",
    "gradio>=4.0",
    "spacy>=3.7",
    "transformers>=4.40",
    "datasets",
    "openai>=1.0",
    "anthropic>=0.25",
    "scikit-learn",
    "scipy",
    "bertopic",
    "presidio-analyzer",
    "presidio-anonymizer",
    "langdetect",
    "tiktoken",
    "httpx",
    "rich",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[project.scripts]
socialscikit = "socialscikit.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
