[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "socialscikit"
version = "0.1.0"
description = "Zero-code toolkit for social science text analysis — classification (QuantiKit), qualitative coding (QualiKit), and research methods tools (Toolbox)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Bolun Sun", email = "bolun.sun@kellogg.northwestern.edu" },
]
maintainers = [
    { name = "Bolun Sun", email = "bolun.sun@kellogg.northwestern.edu" },
]
keywords = [
    "social-science",
    "computational-social-science",
    "text-classification",
    "qualitative-coding",
    "qualitative-research",
    "inter-coder-reliability",
    "consensus-coding",
    "llm",
    "gradio",
    "nlp",
    "research-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Sociology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "openpyxl",
    "gradio>=4.0",
    "spacy>=3.7",
    "transformers>=4.40",
    "datasets",
    "openai>=1.0",
    "anthropic>=0.25",
    "scikit-learn",
    "scipy",
    "bertopic",
    "langdetect",
    "tiktoken",
    "httpx",
    "rich",
]

[project.optional-dependencies]
# Local transformer fine-tuning needs torch (~2GB install).  Keep optional.
finetune = ["torch>=2.0"]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy", "build", "twine"]

[project.urls]
Homepage = "https://github.com/Baron-Sun/socialscikit"
Repository = "https://github.com/Baron-Sun/socialscikit"
Documentation = "https://github.com/Baron-Sun/socialscikit#readme"
Issues = "https://github.com/Baron-Sun/socialscikit/issues"
Changelog = "https://github.com/Baron-Sun/socialscikit/releases"

[project.scripts]
socialscikit = "socialscikit.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/socialscikit",
    "/README.md",
    "/README_zh.md",
    "/LICENSE",
    "/CITATION.cff",
    "/examples",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["socialscikit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
